munto_docs/DB정합성/v3/주문 결제 공통 규칙 명세서.md
# 주문/결제 공통 규칙 명세서

작성일: 2026년 4월 22일
작성자: 김범진

> 작성일: 2026-04-16
관련 이슈: WEBB-1321
도메인별 규칙:
> 
> 
> [소셜링 결제/환불 규칙 명세서](https://www.notion.so/348e2bc7639d8076854ac458d47f8fd3?pvs=21) 
> 
> [클럽 결제/환불 규칙 명세서](https://www.notion.so/348e2bc7639d8082b4cbf0802009bc7f?pvs=21) 
> 
> [챌린지 결제/환불 규칙 명세서](https://www.notion.so/348e2bc7639d807ebd9cf3e13a29258f?pvs=21) 
> 개선 사항: [문토 비즈니스 규칙 개선 목록](https://www.notion.so/349e2bc7639d8041bb1eeabf4d01f778?pvs=21) 
> 

---

## 1. 핵심 개념

### 1-1. 관련 테이블

| 테이블 | 역할 |
| --- | --- |
| `Order` | 주문. 도메인별 참여권의 결제 기록 |
| `Payment` | PG 결제 레코드. CARD 결제 시 생성 |
| `OrderHistory` | Order 상태 변경 이력. 모든 전이 시 반드시 기록 |
| `PaymentRequest` | Bootpay 웹훅 수신 임시 저장. 처리 후 삭제 |

### 1-2. 결제 방식

```
단건 결제 (소셜링, 챌린지)
  - OrderKind.CARD: Bootpay confirmReceipt → Payment 생성
  - OrderKind.FREE: PG 호출 없음 (price = 0)

빌링키 방식 (클럽)
  - 빌링키 등록 후 정기/즉시 청구
  - 세부 규칙 → order-club.md 참조
```

### 1-3. OrderStatus 정의

```
WAITING_PAYMENT          결제 대기 (주문 생성 직후)
COMPLETED_PAYMENT        결제 완료 (참여 유효)
FAILED_PAYMENT           Bootpay 결제 승인 실패 (카드 거절, 한도 초과 등 PG 거절)
EXPIRED                  결제창 진입 없이 이탈
COMPLETED_CANCEL_PAYMENT 취소 및 환불 완료
FAILED_CANCEL_PAYMENT    취소 완료, 그러나 PG 환불 실패 (수동 처리 필요)
PARTIAL_REFUNDED         부분 환불 완료 (얼리버드 등)
PARTIAL_REFUND_FAILED    부분 환불 실패 (수동 처리 필요)

-- 제거 예정 (레거시) --
NONE                     무료 주문 완료를 나타내던 구 값. v3 전환 후 COMPLETED_PAYMENT로 통일됨.
                         프로덕션 잔존 약 150건(유저 2명) → COMPLETED_PAYMENT로 마이그레이션 후 제거
REQUEST_CANCEL_PAYMENT   사용된 적 없는 값. 프로덕션 0건 확인 → 제거
COMPLETE_PAYMENT         COMPLETED_PAYMENT와 혼동되는 구 값. 프로덕션 0건 확인 → 제거
```

---

## 2. 핵심 불변식 (Invariants)

모든 쓰기 작업은 아래 불변식을 보존해야 한다.

### Invariant 1 **—** Order-Member 정합성

```
  모든 도메인 멤버(SocialingMember/ChallengeMember/ClubMember)는
  반드시 하나의 Order와 매핑된다.
    - SocialingMember.orderId NOT NULL @unique (1:1)
    - ChallengeMember.orderId NOT NULL @unique (1:1)
    - ClubMember ↔ Order: ClubMembership 경유 (구독 갱신으로 1:N 가능)
      ※ 개선 방향 → 개선 목록 §4 참조
  유료·무료 무관 Order는 반드시 존재한다.
  Order.orderStatus와 멤버 상태는 일관돼야 한다 (각 도메인 문서 Invariant 참조).
```

### Invariant 2 **—** Order-Payment 정합성

```
  OrderKind = CARD → receiptId 기준 Payment 레코드 존재
  OrderKind = FREE → Payment 없음 (PG 호출 이력 없음)
```

### Invariant 3 **—** OrderStatus 단방향

```
  OrderStatus 전이는 단방향이다. 역방향 전이 불가.
  전이 경로는 §3 참조.
```

### Invariant 4 **—** OrderHistory 완전성

```
  OrderStatus 전이가 발생할 때마다 반드시 OrderHistory 레코드를 생성한다.
  성공/실패 무관 — 실패 사유도 함께 기록한다.
  환불 결과를 silently swallow하지 않는다(§4 환불 처리 원칙).
```

### Invariant 5 **—** PaymentRequest 일시성

```
  PaymentRequest는 Payment로 전환되거나 정리 스케줄러로 삭제된다.
  30분 이상 Payment 연결 없이 존속해서는 안 된다 (§6 미연결 정리).
```

### Invariant 6 **—** 금액 정합성

```
  orderPrice = remainPrice + refundPrice
    - 결제 직후: remainPrice = orderPrice, refundPrice = 0
    - 전액 환불: remainPrice = 0, refundPrice = orderPrice
    - 부분 환불: 0 < remainPrice < orderPrice
  ※ cancelledPrice는 Bootpay 응답 기반 별도 추적 필드이며,
    위 등식에 포함되지 않는다 (V1/V2 응답 호환용).
```

---

## 3. OrderStatus 전이 규칙

```
WAITING_PAYMENT
  ├→ COMPLETED_PAYMENT  (결제 성공 + 도메인 후처리 완료)
  ├→ FAILED_PAYMENT     (결제 확정 실패 — 카드 거절 / confirm 미완료로 스케줄러 정리)
  └→ EXPIRED            (스케줄러: 결제창 미진입 이탈)

COMPLETED_PAYMENT
  ├→ COMPLETED_CANCEL_PAYMENT (취소 완료 — 환불 성공, 환불 없음 모두 포함)
  ├→ FAILED_CANCEL_PAYMENT    (아래 중 하나)
  │                            - 취소 후 PG 환불 시도 실패
  │                            - Sweeper 스케줄러가 상태 불일치 Order 감지 → 재시도 루프 편입 (§5-4)
  └→ PARTIAL_REFUNDED         (부분 환불 성공 — 얼리버드 등)

PARTIAL_REFUNDED
  ├→ COMPLETED_CANCEL_PAYMENT (잔여분 전액 환불 성공)
  └→ FAILED_CANCEL_PAYMENT    (잔여분 전액 환불 실패)
                               ※ 시도가 "전액 환불"이므로 PARTIAL_REFUND_FAILED가 아님.
                                 §5-2 재시도 스케줄러가 이 상태를 잡아 COMPLETED_CANCEL_PAYMENT로 수렴.

FAILED_CANCEL_PAYMENT
  └→ COMPLETED_CANCEL_PAYMENT (재환불 성공 — 스케줄러 재시도 또는 수동)

PARTIAL_REFUND_FAILED
  └→ PARTIAL_REFUNDED         (재환불 성공 — 스케줄러 재시도 또는 수동)
```

역방향 전이 불가, 모든 전이 시 `OrderHistory` 레코드를 반드시 생성한다.

---

## 4. 환불 처리 원칙

```
[전액 환불 — CARD 결제]
  PG 환불 실행 (Bootpay cancelReceipt)

  성공 → Order.orderStatus = COMPLETED_CANCEL_PAYMENT
         Order.refundPrice, remainPrice 갱신 (Invariant 6 유지)
         OrderHistory 기록

  실패 → Order.orderStatus = FAILED_CANCEL_PAYMENT
         OrderHistory 기록 (실패 사유 포함)
         Slack 알림 발송 (수동 처리 채널)

[환불 없는 취소 — FREE 결제 또는 환불 정책상 refundPrice = 0]
	PG 호출 없이 Order.orderStatus = COMPLETED_CANCEL_PAYMENT
	
	OrderHistory 기록
	※ 적용 예시: price = 0 무료 결제 취소,
	클럽 GRACE_PERIOD 취소 / 14일 경과 본인 탈퇴 (order-club.md §4-1),
		소셜링 당일 취소 등 환불 금액이 0인 모든 경우
	※ 원칙: 멤버가 취소/종료 상태가 되면 환불 유무와 무관하게
		Order도 COMPLETED_CANCEL_PAYMENT로 전이한다.
		"취소된 멤버 + COMPLETED_PAYMENT Order" 상태 불일치를 구조적으로 방지한다.

공통 원칙:
  - 환불 결과를 삼키지(silently swallow) 않는다 (Invariant 4)
  - 성공/실패 모두 OrderHistory에 기록한다 (Invariant 4)
  - 금액 필드 갱신은 Invariant 6을 항상 보존한다
  - PG와 DB 사이는 원자적이지 않다
    → PG 성공 + DB 실패 시 Slack 알림 후 수동 조치
    → PG 실패는 DB에 FAILED_CANCEL_PAYMENT로 기록하고 재시도 대기 (§5-2)
```

---

## 5. 주문 상태별 처리 규칙

> 현재 코드의 문제점과 개선 방향 → `개선 목록` 섹션 1, 2 참조
> 

### 5-1. WAITING_PAYMENT

```
[웹훅 수신 시 선행 처리]
  payload.order_id로 Order 조회
  → WAITING_PAYMENT 상태인 경우: Order.bootpayReceiptId = payload.receipt_id 세팅
  → 그 외 (이미 처리됨): 무시

[WAITING_PAYMENT 통합 스케줄러]

  CASE A: 결제 미발생 순수 이탈
    조건: bootpayReceiptId IS NULL AND updatedAt <= NOW() - 15분
    처리: PG 호출 없음 → EXPIRED, OrderHistory 기록

  CASE B: 결제 완료, confirm 미완료
    조건: bootpayReceiptId IS NOT NULL AND updatedAt <= NOW() - 10분
    처리: Bootpay.getReceipt(bootpayReceiptId)
          → 결제완료(1) 또는 승인대기(2): PG 전액 환불
          → 그 외 (이미 취소됨): 환불 스킵
          Order → FAILED_PAYMENT, PaymentRequest 삭제, OrderHistory 기록

[미연결 PaymentRequest 정리] (보조 안전망)
  조건: PaymentRequest.createdAt <= NOW() - 30분 AND Payment(receiptId) 없음
  처리: PG 전액 환불 → PaymentRequest 삭제

공통 원칙:
  confirm을 재호출하지 않는다
  도메인 후처리(멤버 생성, 정원 차감)는 스케줄러에서 재현 불가 → 유저가 재결제
  모든 전이 시 OrderHistory 기록 필수
```

---

### 5-2. FAILED_CANCEL_PAYMENT

> 이 상태는 **두 가지 경로**로 진입한다:
① `COMPLETED_PAYMENT`에서 전액 환불 시도 실패
② `PARTIAL_REFUNDED`에서 잔액 전액 환불 시도 실패
> 

```
조건: orderStatus = FAILED_CANCEL_PAYMENT
       (별도 시간 컷오프 없음 — 매 주기 자동 재시도)

이 상태는 도메인 취소는 완료됐으나 PG 환불만 실패한 것이다.
멤버 상태는 이미 CANCEL/KICK/REJECT → 도메인 후처리 불필요.

처리:
  PG 환불 재시도
  → 성공: Order → COMPLETED_CANCEL_PAYMENT, OrderHistory 기록
  → 실패: OrderHistory에 재시도 실패 기록
          최대 재시도 횟수 초과 시 Slack 알림 + 수동 처리
          
재시도 정책 — 명시적 카운트·백오프 없음:
  - 스케줄러 주기 자체가 호출 간격(암묵적 백오프) 역할
  - "최대 재시도 횟수" 개념 없음. 영구 실패("좀비") 식별은 운영자가 BACK-202에서
    실패 지속 시간·이유를 보고 수동 종결/재처리
  - 모니터링 지표: 실패 상태 N일 이상 지속 Order 건수 + 실패 이유 분포
```

---

### 5-3. PARTIAL_REFUND_FAILED

이 상태는 `COMPLETED_PAYMENT`에서 **부분 환불(얼리버드 등) 시도가 실패**한 경우에만 진입한다. `PARTIAL_REFUNDED`에서의 잔액 환불 실패는 §5-2 경로로 처리한다.

```
조건: orderStatus = PARTIAL_REFUND_FAILED
       (별도 시간 컷오프 없음 — 매 주기 자동 재시도)
       
이 상태는 COMPLETED_PAYMENT에서 부분 환불(얼리버드 등) 시도가 실패한 경우에만 진입한다.
PARTIAL_REFUNDED에서의 잔액 환불 실패는 §5-2 경로로 처리한다.

처리:
  PG 부분 환불 재시도 (Bootpay 멱등 키 재사용)
  → 성공: Order → PARTIAL_REFUNDED, OrderHistory 기록
  → 실패: 상태 유지. 멱등 계약에 따라 OrderHistory·Slack 재기록 없음

재시도 정책 — §5-2와 동일 (스케줄러 주기 = 암묵적 백오프, 자동 한계 판정 없음).
좀비 식별은 운영자(BACK-202)가 수동 처리.
```

### 5-4. 상태 불일치 Order Sweeper

일괄 취소(폐강/CLOSE_BY_SYSTEM) TX 커밋 후 환불 루프 크래시 등으로 발생한
"멤버 종료 상태 + Order=COMPLETED_PAYMENT" 불일치를 복구한다.

```
조건:
  Order.orderStatus = COMPLETED_PAYMENT
  AND 연결된 멤버(SocialingMember/ChallengeMember/ClubMember)의 status ∈ {CANCEL, KICK, REJECT}
  AND updatedAt <= NOW() - 10분

처리:
  Order.orderStatus → FAILED_CANCEL_PAYMENT (재시도 루프 진입)
  OrderHistory 기록 (진입 사유: 상태 불일치 감지)
  이후 §4-2 재시도 스케줄러가 PG 환불 처리

배경:
  일괄 취소 흐름은 DB 전이(멤버 상태 + 소셜링/챌린지/클럽 상태)는 단일 TX에서 원자화되지만
  PG 환불은 외부 API이므로 TX 외부에서 실행된다. TX 커밋과 환불 루프 사이 크래시로
  환불이 누락될 수 있어 본 스케줄러가 안전망 역할을 한다.

관련 이슈: WEBB-1326
```

---

## 6. **미연결 PaymentRequest 정리 규칙**

```
조건:
  PaymentRequest 레코드가 존재
  AND createdAt <= NOW() - 30분
  AND 동일 receiptId를 가진 Payment 레코드가 없음

이 케이스는 Bootpay 웹훅은 수신됐으나 Payment로 전환되지 않은 고아 건이다.

처리:
  PG 전액 환불 (실패해도 계속)
  PaymentRequest 레코드 삭제
```

---

## 6. 동시성 보호 원칙

```
결제 확정 시 도메인 후처리(정원 차감, 멤버 생성)는 반드시 DB 트랜잭션 내에서 처리한다.

PG 결제 승인(외부 API)과 DB 트랜잭션은 원자적으로 묶을 수 없으므로:
  - PG 승인 직전: 가용 여부 재검증 (availCount > 0, status = RECRUITING 등)
  - PG 승인 후: DB 트랜잭션 내에서 원자적으로 처리
  - PG 승인 성공 + DB 트랜잭션 실패:
      Order는 WAITING_PAYMENT 상태로 남고, Bootpay 웹훅 수신 시 세팅된
      Order.bootpayReceiptId는 보존된다.
      §5-1 CASE B 스케줄러가 이를 감지 → Bootpay.getReceipt로 결제 상태 조회
      → PG 전액 환불 실행 → Order → FAILED_PAYMENT로 전이.
      자동 복구되므로 Slack 알림은 모니터링 용도이며, 수동 환불이 필요한 경우는
      스케줄러 재시도도 해소되지 않을 때(예: PG 장애 지속)에 한정된다.
```

---

<aside>
🔁

## **변경 이력**

</aside>

| **버전** | **일자** | **변경자** | **변경 내용** |
| --- | --- | --- | --- |
| v1.0.0 | 26.04.16 | 김범진 | 최초 작성 |
| v1.1.0 | 26.04.21 | 김범진 |   • 핵심 불변식(Invariants) 섹션 신설
  • OrderStatus 전이에 Sweeper 진입 경로 명시 |
| v1.1.1 | 26.04.27 | 김범진 |   • PARTIAL_REFUNDED → FAILED_CANCEL_PAYMENT 전이 추가 (잔액 전액 환불 실패 경로)
  • WEBB-1325 OnePager §5.4 deviation 정합 — Case 4 재시도가 COMPLETED_CANCEL_PAYMENT로 수렴하므로 의미적으로 정확
  • §5-2, §5-3에서 updatedAt 시간 컷오프 제거 |
| v1.2.0 | 26.04.29 | 김범진 | 클럽 결제 항목에서 ONETIME 제거 |